# tg

./: .env  .gitignore  README.md  noisetg-386111-8ded38a9c817.json  pyproject.toml  requirements.txt
tg/: config.py  keybords.py  main.py
tg/calendar/: datatime_work.py  google_api.py
tg/content/: text.py
